Message in index

--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,7 @@
 
     <video id="webcam_canvas" playsinline autoplay style="display:none"></video>
     <canvas id="out_canvas"></canvas>
+    Put up an apriltag to see its detection.
 
 </div>
 
